# CudaProgramming

./: .gitignore  CMakeLists.txt  deviceQuery.txt  profile.ncu-rep
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.devcontainer/zsh-plugins/: install.sh
csrc/: addVector.cu  deviceQuery.cu  hello.cu  index.cu  memTransfer.cu  pinMemory.cu  readOnlyCache.cu  readSegmentUnroll.cu  readWriteOffset.cu  reduceInteger.cu  simpleAOS.cu  simpleDivergence.cu  simpleSOA.cu  smemRect.cu  smemReduceInteger.cu  smemSquare.cu  smemTranspose.cu  streamSimple.cu  sumArrayZeroCopy.cu  sumMatrix.cu  sumMatrixDiffConfig.cu  torchBfloat16.cu  torchLinear.cu  torchOps.cu  transpose.cu  warpMat.cu
help/: all_metric.txt  index.txt
include/: common.h
non-project/: all_metric.txt  docker_without_sudo.md
profile/: memTransfer.nsys-rep  memTransfer.sqlite  pinMemory.nsys-rep  sumArrayZeroCopy.nsys-rep  sumArrayZeroCopy.sqlite
profiling/configs/: readOnlyCache.ncu-cfg  readSegmentUnroll.ncu-cfg  readWriteOffset.ncu-cfg  simpleAOS.ncu-cfg  smemReduceInteger.ncu-cfg  smemSquare.ncu-cfg  smemTranspose.ncu-cfg  transpose.ncu-cfg
profiling/profiles/: index.ncu-rep  pinMemory.sqlite  readOnlyCache.ncu-rep  readSegmentUnroll.ncu-rep  readWriteOffset_ca.ncu-rep  readWriteOffset_cg.ncu-rep  simpleAOS.ncu-rep  simpleDivergence.ncu-rep  simpleSOA.ncu-rep  smemRect.ncu-rep  smemReduceInteger.ncu-rep  smemSquare.ncu-rep  smemTranspose.ncu-rep  streamSimple.nsys-rep  streamSimple.qdstrm  streamSimple.sqlite  sumArrayZeroCopy.nsys-rep  torchLinear.ncu-rep  transpose.ncu-rep
profiling/results/: final_readWriteOffset_ca.csv  final_readWriteOffset_cg.csv  final_reduceInteger.csv  ncu_readWriteOffset_ca.csv  ncu_readWriteOffset_cg.csv  sumMatrixDiffConfig.csv
profiling/sections/: DeviceMemoryTable.section  LoadMetric.section  SharedMemAnalysis.section  StoreMetric.section
results/: final_reduceInteger.csv  ncu_reduceInteger.csv  sumMatrix_Occp.csv
scripts/: transform_result_csv.py
